@@ -1795,6 +1795,10 @@ void set_server_option(char * option, char * value)
 	{
 		cfg.vanilla_monsters = atoi(value);
 	}
+	else if (!strcmp(option,"PET_MONSTERS"))
+	{
+		cfg.pet_monsters = atoi(value);
+	}
 	else if (!strcmp(option,"RUNNING_SPEED"))
 	{
 		cfg.running_speed = atoi(value);
