@@ -118,7 +118,7 @@ SPELL_INTERFERE = 8
 RETIRE_TIMER = -1
 
 # Option : ban players from transfering/storing (non-random) artifacts.
-# If an artifact is dropped/thrown/sold/send via telekinesis, that artifact
+# If an artifact is dropped/thrown/sold/sent via telekinesis, that artifact
 # immediately disappears and becomes findable again.
 # (only exception is when a player dies[other than suicide]; in that case
 # artifacts drop just like all the other stuffs.)
@@ -193,3 +193,7 @@ PERN_MONSTERS = 100
 CTH_MONSTERS = 1
 JOKE_MONSTERS = 1
 VANILLA_MONSTERS = 100
+
+# Option : change of generation of monsters that are supposed to be friends;
+# since our code doesn't have NPC code for now, all of them come as foe. [0]
+PET_MONSTERS = 0
